mark end of metadata

--- a/42-00-EveryNormedSpaceWithSchauderBasisIsSeparable.tex
+++ b/42-00-EveryNormedSpaceWithSchauderBasisIsSeparable.tex
@@ -20,6 +20,8 @@
 %\pmkeywords{normed space}
 %\pmkeywords{Banach space}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
