--- a/42A16-CommonFourierSeries.tex
+++ b/42A16-CommonFourierSeries.tex
@@ -18,6 +18,8 @@
 \pmrelated{SawBladeFunction}
 \pmrelated{MinimalityPropertyOfFourierCoefficients}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
