--- a/42A99-PeriodicExtension.tex
+++ b/42A99-PeriodicExtension.tex
@@ -16,6 +16,8 @@
 \pmrelated{TriangularWaveFunction}
 \pmrelated{SawBladeFunction}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
