--- a/42B05-WirtingersInequality.tex
+++ b/42B05-WirtingersInequality.tex
@@ -16,6 +16,8 @@
 %\pmkeywords{parseval}
 %\pmkeywords{isoperimetric}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
