--- a/42B10-ApproximatingFourierIntegralsWithDiscreteFourierTransforms.tex
+++ b/42B10-ApproximatingFourierIntegralsWithDiscreteFourierTransforms.tex
@@ -16,6 +16,8 @@
 \pmclassification{msc}{42A38}
 \pmrelated{DiscreteTimeFourierTransformInRelationWithItsContinousTimeFourierTransfrom}
 
+\endmetadata
+
 % The standard font packages
 \usepackage{amssymb}
 \usepackage{amsmath}
