--- a/42C05-ChebyshevPolynomial.tex
+++ b/42C05-ChebyshevPolynomial.tex
@@ -18,6 +18,8 @@
 \pmdefines{Chebyshev polynomial of first kind}
 \pmdefines{Chebyshev polynomial of second kind}
 
+\endmetadata
+
 %\usepackage{graphicx}
 %%%\usepackage{xypic} 
 \usepackage{bbm}
