--- a/42C05-OrthogonalPolynomials.tex
+++ b/42C05-OrthogonalPolynomials.tex
@@ -17,6 +17,8 @@
 \pmrelated{OrthogonalMatrices}
 \pmrelated{Orthonormal}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
