--- a/42-00-CountableBasis.tex
+++ b/42-00-CountableBasis.tex
@@ -15,6 +15,8 @@
 \pmclassification{msc}{15A03}
 \pmsynonym{Schauder basis}{CountableBasis}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
