--- a/42A16-FourierSeriesOfFunctionOfBoundedVariation.tex
+++ b/42A16-FourierSeriesOfFunctionOfBoundedVariation.tex
@@ -17,6 +17,8 @@
 \pmrelated{DirichletConditions}
 \pmrelated{FourierCoefficients}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
