--- a/42A16-PoissonSummationFormula.tex
+++ b/42A16-PoissonSummationFormula.tex
@@ -15,6 +15,8 @@
 \pmclassification{msc}{42A38}
 \pmsynonym{Poisson summation}{PoissonSummationFormula}
 
+\endmetadata
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
