--- a/42A16-RiemannLebesgueLemma.tex
+++ b/42A16-RiemannLebesgueLemma.tex
@@ -13,6 +13,8 @@
 \pmcomment{trigger rebuild}
 \pmclassification{msc}{42A16}
 
+\endmetadata
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
