--- a/42A20-UniquenessOfFourierExpansion.tex
+++ b/42A20-UniquenessOfFourierExpansion.tex
@@ -22,6 +22,8 @@
 \pmrelated{UniquenessOfDigitalRepresentation}
 \pmrelated{UniquenessOfLaurentExpansion}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
