--- a/42A32-FourierSineAndCosineSeries.tex
+++ b/42A32-FourierSineAndCosineSeries.tex
@@ -33,6 +33,8 @@
 \pmdefines{Fourier double sine series}
 \pmdefines{Fourier double cosine series}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
