--- a/42A38-ProofOfSamplingTheorem.tex
+++ b/42A38-ProofOfSamplingTheorem.tex
@@ -15,6 +15,8 @@
 \pmclassification{msc}{94A20}
 \pmrelated{PlancherelsTheorem}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
