--- a/42A38-TableOfFourierTransforms.tex
+++ b/42A38-TableOfFourierTransforms.tex
@@ -15,6 +15,8 @@
 \pmsynonym{Groupoid Transforms}{TableOfFourierTransforms}
 \pmdefines{Fourier-Stieltjes generalization of FT}
 
+\endmetadata
+
 \usepackage{amssymb,amscd}
 \usepackage{amsmath}
 \usepackage{amsfonts}
