--- a/42B05-ParsevalEquality.tex
+++ b/42B05-ParsevalEquality.tex
@@ -19,6 +19,8 @@
 \pmrelated{ValueOfTheRiemannZetaFunctionAtS2}
 \pmdefines{Parseval theorem}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
