--- a/42B10-PlancherelsTheorem.tex
+++ b/42B10-PlancherelsTheorem.tex
@@ -15,6 +15,8 @@
 \pmclassification{msc}{42A38}
 \pmrelated{ProofOfSamplingTheorem}
 
+\endmetadata
+
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
