--- a/42C05-ChristoffelDarbouxFormula.tex
+++ b/42C05-ChristoffelDarbouxFormula.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{42C05}
 \pmclassification{msc}{33D45}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
