--- a/42C40-UncertaintyTheorem.tex
+++ b/42C40-UncertaintyTheorem.tex
@@ -14,6 +14,8 @@
 \pmclassification{msc}{42C40}
 \pmrelated{UncertaintyPrinciple}
 
+\endmetadata
+
 % this is the default PlanetMath preamble.  as your knowledge
 % of TeX increases, you will probably want to edit this, but
 % it should be fine as is for beginners.
